# TECMediaFileSystem

./: .gitignore  A  CMakeLists.txt  Pdfabits.cpp  README.md  main.py  requirements.txt  run_project.sh
Core/config/: disk1.xml  disk2.xml  disk3.xml  disk4.xml
Core/controller/: controller.cpp  controller.h  main.cpp
Core/disk_node/: config.xml  disk_node.cpp  disk_node.h  disk_server.cpp  disk_server.h  main.cpp  storage_manager.cpp
Core/http/: Raid5HTTPServer.cpp  Raid5HTTPServer.h
Core/pdfToBit/: PdfaBits.h  Pdfabits.cpp
GUI/: main.py
GUI/controllers/: controller_client.py
GUI/gui/: mainWindow.py
GUI/models/: diskInformation.py  fileEntry.py
GUI/utils/: formatUtils.py
gui/: mainWindow.py
